src/main/java/com/example/project_v2/_core/errors/exception/ApiException500.java
package com.example.project_v2._core.errors.exception;

public class ApiException500 extends RuntimeException {
    public ApiException500(String msg){
        super(msg);
    }
}
